Add more content to main page

--- a/style.css
+++ b/style.css
@@ -27,3 +27,43 @@
 .dark .nextra-card:hover svg {
     color: currentColor;
 }
+
+.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
+    @apply mt-2 font-bold tracking-tight text-slate-900 dark:text-slate-100;
+}
+
+.main-content h1 {
+    @apply text-4xl;
+}
+
+.main-content h2 {
+    @apply text-3xl;
+}
+
+.main-content h3 {
+    @apply text-2xl;
+}
+
+.main-content h4 {
+    @apply text-xl;
+}
+
+.main-content h5 {
+    @apply text-lg;
+}
+
+.main-content h6 {
+    @apply text-base;
+}
+
+.main-content h1:first-child, .main-content h2:first-child, .main-content h3:first-child, .main-content h4:first-child, .main-content h5:first-child, .main-content h6:first-child {
+    @apply mt-0;
+}
+
+.main-content p {
+    @apply mt-6 leading-7 first:mt-0;
+}
+
+.main-content a {
+    @apply text-blue-600 underline;
+}
