--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import 'tailwindcss/utilities' layer(utilities);
+@import 'tailwindcss';
 
 @plugin 'tailwindcss-animate';
 
@@ -54,17 +54,6 @@
     to {
       height: 0;
     }
-  }
-}
-
-@utility container {
-  margin-inline: auto;
-  padding-inline: 2rem;
-  @media (width >= --theme(--breakpoint-sm)) {
-    max-width: none;
-  }
-  @media (width >= 1400px) {
-    max-width: 1400px;
   }
 }
 
@@ -221,5 +210,5 @@ body {
 }
 
 .highlight-code {
-  @apply border-black border-opacity-[0.04] bg-opacity-[0.03] bg-black break-words rounded-md border py-0.5 px-[.25em] text-[.9em] dark:border-white/10 dark:bg-white/10;
+  @apply border-black border-black/4 bg-black/3 bg-black break-words rounded-md border py-0.5 px-[.25em] text-[.9em] dark:border-white/10 dark:bg-white/10;
 }
