--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 @import 'tailwindcss';
 @import "tw-animate-css";
-@import 'fumadocs-ui/css/dusk.css';
+@import 'fumadocs-ui/css/catppuccin.css';
 @import 'fumadocs-ui/css/preset.css';
 
 .nextra-card img {
