style: apply fixes

--- a/src/style.css
+++ b/src/style.css
@@ -1,36 +1,36 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 @import "tw-animate-css";
-@import 'fumadocs-ui/css/catppuccin.css';
-@import 'fumadocs-ui/css/preset.css';
+@import "fumadocs-ui/css/catppuccin.css";
+@import "fumadocs-ui/css/preset.css";
 
 .nextra-card img {
-    user-select: none;
+  user-select: none;
 }
 
 .nextra-card:hover svg {
-    color: currentColor;
+  color: currentColor;
 }
 
 .nextra-card svg {
-    width: 1.5rem;
-    color: #00000033;
-    transition: color 0.3s ease;
+  width: 1.5rem;
+  color: #00000033;
+  transition: color 0.3s ease;
 }
 
 .nextra-card p {
-    margin-top: 0.5rem;
+  margin-top: 0.5rem;
 }
 
 .dark .nextra-card svg {
-    color: #ffffff66;
+  color: #ffffff66;
 }
 
 .dark .nextra-card:hover svg {
-    color: currentColor;
+  color: currentColor;
 }
 
 .front-button {
-    @apply mx-auto flex flex-row gap-1 justify-start overflow-hidden rounded-lg border border-gray-200 text-current dark:shadow-none hover:shadow-gray-100 dark:hover:shadow-none shadow-gray-100 active:shadow-xs active:shadow-gray-200 transition-all duration-200 hover:border-gray-300 bg-transparent shadow-xs dark:border-neutral-800 hover:bg-slate-50 hover:shadow-md dark:hover:border-neutral-700 dark:hover:bg-neutral-900;
+  @apply mx-auto flex flex-row gap-1 justify-start overflow-hidden rounded-lg border border-gray-200 text-current dark:shadow-none hover:shadow-gray-100 dark:hover:shadow-none shadow-gray-100 active:shadow-xs active:shadow-gray-200 transition-all duration-200 hover:border-gray-300 bg-transparent shadow-xs dark:border-neutral-800 hover:bg-slate-50 hover:shadow-md dark:hover:border-neutral-700 dark:hover:bg-neutral-900;
 }
 
 @custom-variant dark (&:is(.dark *));
