--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@
 @import "tw-animate-css";
 @import "fumadocs-ui/css/catppuccin.css";
 @import "fumadocs-ui/css/preset.css";
+@import "shadcn/tailwind.css";
 
 @custom-variant dark (&:is(.dark *));
 
